# tafel

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: test.yaml
.github/workflows/: dependabot-pdm.yml  test.yaml
dataset/: HER.xy
src/tafel/app/: cli.py
src/tafel/core/: bo.py  reader.py
tests/: test_bo.py  test_cli.py  test_reader.py
tests/data/: example2.CSV
