[project]
name = "tafel"
version = "0.1.0"
description = "A python package to extract Tafel slope"
authors = [
    {name = "Koki Muraoka", email = "muraok_k@chemsys.t.u-tokyo.ac.jp"},
]
dependencies = []
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.ruff]
target-version = "py310"
line-length = 119
select = [
    "ALL"
]
ignore = [
  "D",
  "COM812",
  "ISC001",
  "ANN401", # Dynamically typed expressions (typing.Any) are disallowed
]

[tool.ruff.per-file-ignores]
"*/tests/*" = ["S101", "PLR2004", "PT009", "S106", "ANN101", "ANN201"]

[tool.ruff.pylint]
max-args = 10
