[project]
name = "tafel"
version = "2025.2.12"
description = "A python package to extract Tafel slope"
authors = [
    {name = "Koki Muraoka", email = "muraok_k@chemsys.t.u-tokyo.ac.jp"},
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "optuna==4.2.1",
    "pandas==2.2.3",
    "plotly==6.0.0",
    "scipy==1.15.1",
    "scikit-learn==1.6.1",
    "kaleido==0.2.1"
]

[project.scripts]
tafel = "tafel.app.cli:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true


[tool.pdm.scripts]
pyright = "pyright ."
black_format = "black ."
ruff_lint = "ruff check ."
ruff_format = "ruff format ."
ruff_fix = "ruff check --fix-only ."
test = "pytest tests --cov=tafel.core --cov-report=term --cov-report=xml --junitxml=junit.xml -o junit_family=legacy"
format = { composite = ["black_format", "ruff_fix", "ruff_format"] }
lint = { composite = ["ruff_lint", "pyright"] }
check = { composite = ["format", "lint", "test"] }


[tool.ruff]
target-version = "py311"
line-length = 119
lint.select = [
    "ALL"
]
lint.ignore = [
  "D",
  "COM812",
  "ISC001",
  "T201", # Do not use print
  "ANN401", # Dynamically typed expressions (typing.Any) are disallowed
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "PLR2004", "PT009", "S106", "ANN101", "ANN201"]

[tool.ruff.lint.pylint]
max-args = 10

[dependency-groups]
dev = [
    "flake8==7.1.1",
    "mypy==1.15.0",
    "black==25.1.0",
    "isort==6.0.0",
    "pytest-cov==6.1.1",
    "ruff==0.9.6",
    "pyright==1.1.394"
]
